--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build:
   stage: build
   script:
     - mkdir -p $OUTPUT_NAME
-    - go build -o $OUTPUT_NAME ./...
+    - go build -o $OUTPUT_NAME ./cmd/gossip/
   artifacts:
     paths:
       - $OUTPUT_NAME
