Connect modules and fix various issues

--- a/e2e-test/test-data/test-config.ini
+++ b/e2e-test/test-data/test-config.ini
@@ -4,3 +4,9 @@ hostkey = nodekey.pem
 cache_size = 50
 degree = 30
 hostkeys_path = ./keys
+weight_push = 45
+weight_pull = 45
+weight_history = 10
+api_address = 0.0.0.0:7001
+challenge_difficulty = 5
+challenge_max_solve_ms = 500
