--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,10 @@
+hostkey = hostkey.pem
+
 [gossip]
 cache_size = 50
 degree = 30
+weight_push = 45
+weight_pull = 45
+weight_history = 10
+challenge_difficulty = 19
+challenge_max_solve_ms = 500
